ref: replaced live data in view model with safer alternative
includes:
- replaced `MutableLiveData` whose value shouldn't be null with
    `SafeMutableLiveData` except the one with `LiveDataEvent`.
- used `SafeMutableLiveData<Optional>` for values that can be null.
- eliminated null checks for live data throughout the codebase.